Bug 270861 - selected text is sometimes bold
Summary: selected text is sometimes bold
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: syntax (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-13 19:23 UTC by Diggory Hardy
Modified: 2011-04-16 13:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Diggory Hardy 2011-04-13 19:23:48 UTC
Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

(kate version: 3.6.1)

Sometimes when text is selected it is made bold (happens in C++ doxygen comments when selecting backwards, end of selection is the end of a word and beginning of selection is the beginning of a word).

I imagine this bold thing is a bug, and usually it's minor. Since I'm using variable-width fonts it causes the text to jump around irritatingly — it might also be preferable to prevent selected text changing the font style when variable width rendering is used.

Reproducible: Always
Comment 1 Dominik Haumann 2011-04-13 19:42:49 UTC
I'm pretty sure this is because you have enabled the "Highlight Selection" plugin (Extensions in the settings dialog). Right?
Comment 2 Diggory Hardy 2011-04-14 10:57:13 UTC
Yes, without this plugin the weird highlighting doesn't occur. (I don't understand what the highlighting is supposed to achieve, but never mind.)
Comment 3 Dominik Haumann 2011-04-14 20:24:24 UTC
the highlight selection highlights all occurences of the selected text in the document.

In the sentence above, selecting the first "the" also highlighs the seconde "the". It's mainly useful for programming, then the variable you have selected is highlighted everywhere.

Can this be closed? I don't see a real bug...
Comment 4 Diggory Hardy 2011-04-15 10:36:36 UTC
Ah, now I understand better what that plug-in is for (very useful, btw). Then could the highlighter only background highlight text when the font isn't monospace (i.e. don't make it bold)?

Give this a try:
1. select a non-monospace font
2. open a document
3. highlight a word by dragging with the mouse, from beginning to end

The last step is less than straight-forward since as soon as the word has been selected, it will be made bold and it's end will move.
Comment 5 Dominik Haumann 2011-04-16 13:25:20 UTC
Git commit 0606ad7ed195add21335ff7d8467a1dbd1424be4 by Dominik Haumann.
Committed on 16/04/2011 at 13:31.
Pushed by dhaumann into branch 'master'.

do not make matches bold

BUG: 270861

M  +2    -1    part/plugins/hlselection/hlselectionplugin.cpp     

http://commits.kde.org/kate/0606ad7ed195add21335ff7d8467a1dbd1424be4
Comment 6 Dominik Haumann 2011-04-16 13:27:57 UTC
Git commit 89e6eb60dc9a66b317a893bf6790febd50fb8810 by Dominik Haumann.
Committed on 16/04/2011 at 13:33.
Pushed by dhaumann into branch 'KDE/4.6'.

do not make matches bold, as non-fixed font jumps around

CCBUG: 270861

M  +0    -1    kate/plugins/hlselection/hlselectionplugin.cpp     

http://commits.kde.org/kdelibs/89e6eb60dc9a66b317a893bf6790febd50fb8810