do not make matches bold

BUG: 270861